--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,13 +1,27 @@
 @charset "UTF-8";
 
 body {
-    background-color: white; /*Muda a cor de fundo*/
+    background-color: #dddddd; /*Muda a cor de fundo*/
     color: rgba(0, 0, 0, 100%); /*Muda a cor da fonte*/
+}
+
+div#interface {
+    width: 900px;
+    background-color: white;
+    margin: -20px auto 0px auto;
+    box-shadow: 0px 0px 10px rgba(0,0,0,.5);
+    padding: 10px;
 }
 
 p {
     text-align: justify; /*Muda o alinhamento do texto*/
     text-indent: 40px; /*Cria um espaço na primeira linha do paragrafo*/
+}
+
+header#cabecalho img#icone{
+    position: absolute;
+    left: 950px;
+    top: 50px;
 }
 
 /* Formatação de imagens com legendas */
@@ -37,5 +51,44 @@ figure.foto-legenda figcaption {
 
 figure.foto-legenda:hover figcaption {
     opacity: 1;
-    transition: opacity 0.5s;
+    transition: opacity 0.8s;
+}
+
+/* Formatação do Menu */
+nav#menu {
+    display: block;
+}
+
+nav#menu ul {
+    list-style: none;
+    text-transform: uppercase;
+    position: absolute;
+    top: -20px;
+    left: 400px;
+}
+
+nav#menu li {
+    display: inline-block;
+    background-color: #dddddd;
+    padding: 10px;
+    margin: 2px;
+    transition: background-color 0.8s;
+}
+
+nav#menu li:hover{
+    background-color: #606060;
+}
+
+nav#menu h1{
+    display: none;
+}
+
+nav#menu a {
+    color: black;
+    text-decoration: none;
+}
+
+nav#menu a:hover {
+    color: white;
+    text-decoration: underline;
 }
