--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif; /*Define a fonte do Body*/
     background-color: #dddddd; /*Muda a cor de fundo*/
     color: rgba(0, 0, 0, 100%); /*Muda a cor da fonte*/
 }
@@ -30,7 +30,7 @@ a {
     font-weight: bolder;
 }
 
-a:hover {
+a:hover { /*Hover significa passar o mouse sobre*/
     text-decoration: underline;
     color: #404040;
     transition: 0.5;
@@ -47,14 +47,14 @@ header#cabecalho img#icone{
 header#cabecalho {
     border-bottom: 1px #606060 solid;
     height: 150px;
-    background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 90px;
+    background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 90px; /*Imagem de fundo, no-repeat evita a imagem de se repetir*/
 }
 
 header#cabecalho h1{
     font-family: 'FonteLogo', Helvetica, sans-serif;
     font-size: 30px;
     color: #606060;
-    text-shadow: 1px 1px 1px rgba(0,0,0,6);
+    text-shadow: 1px 1px 1px rgba(0,0,0,6); /*Cria uma sombra para o texto*/
     padding: 0px;
     margin-bottom: 0px;
 }
@@ -70,9 +70,9 @@ header#cabecalho h2{
 /* Formatação de imagens com legendas */
 
 figure.foto-legenda {
-    position: relative;
+    position: relative; /*Posição relativa interage apenas com o espaço daquela tag*/
     border: 8px solid white;
-    box-shadow: 1px 1px 4px black;  
+    box-shadow: 1px 1px 4px black; /*cria uma sombra para a "box"*/
 }
 
 figure.foto-legenda img {
@@ -82,14 +82,14 @@ figure.foto-legenda img {
 
 figure.foto-legenda figcaption {
     opacity: 0;
-    position: absolute;
+    position: absolute; /*Posição absoluta interage com a página inteira*/
     top: 0px;
     background-color: rgba(0,0,0,.4);
     color: white;
     width: 100%;
     height: 100%;
     padding: 10px;
-    box-sizing: border-box;
+    box-sizing: border-box; /*Especifica o comportamento da altura e largura*/
 }
 
 figure.foto-legenda:hover figcaption {
