Pequenos ajustes nos vídeos

--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -261,3 +261,11 @@ footer#rodape {
 footer#rodape p {
     text-align: center;
 }
+
+video#filme1 {
+    width: 500px;
+}
+
+video#filme2 {
+    width: 350px;
+}
